<resources>
    <string name="app_name">D3 Grimoire</string>
    <string name="database_URL">https://appcompanion-eedc3-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="news_1_title">Season 35: Eternal Conflict – Has Concluded</string>
    <string name="news_1_description">Diablo III Season 35 begins on June 6. Eradicate Hell’s emissaries using powerful boons granted by the season theme, and more.</string>
    <string name="news_1_imgUrl">https://bnetcmsus-a.akamaihd.net/cms/blog_header/2m/2M8QRV55TNGM1744065821014.png</string>
    <string name="news_1_url">https://news.blizzard.com/en-us/article/24191146/season-35-eternal-conflict-has-concluded</string>
    <string name="news_1_author">Admin</string>
    <string name="news_2_title">Play Diablo III on Game Pass now!</string>
    <string name="news_2_description">The legendary action-RPG is now available on Game Pass, including the original game and the Reaper of Souls expansion.</string>
    <string name="news_2_imgUrl">https://bnetcmsus-a.akamaihd.net/cms/blog_header/5h/5HYUB8O4XUYQ1744130028829.jpg</string>
    <string name="news_2_url">https://news.blizzard.com/en-us/article/24186408/play-diablo-iii-on-game-pass-now</string>
    <string name="news_2_author">Admin</string>
    <string name="news_3_title">BlizzCon Returns In 2026</string>
    <string name="news_3_description">Our celebration of our universes, connection, and community is coming back to the Anaheim Convention Center next year.</string>
    <string name="news_3_imgUrl">https://bnetcmsus-a.akamaihd.net/cms/blog_header/lf/LFFILFFOMFKV1741374538375.jpg</string>
    <string name="news_3_url">https://news.blizzard.com/en-us/article/24178650/blizzcon-returns-in-2026</string>
    <string name="news_3_author">Admin</string>
    <string name="hero_1_name">John</string>
    <string name="hero_1_class">Barbarian</string>
    <string name="hero_1_level">5</string>
    <string name="hero_2_name">James</string>
    <string name="hero_2_class">Monk</string>
    <string name="hero_2_level">3</string>
    <string name="hero_3_name">Jack</string>
    <string name="hero_3_class">Crusader</string>
    <string name="hero_3_level">1</string>
    <string name="community_news">Community News</string>
    <string name="content_description">Other</string>
    <string name="user">User:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="image_url_ellipsis">Image URL...</string>
    <string name="username">USERNAME</string>
    <string name="sign_out">Sign Out</string>
    <string name="heroes">Heroes</string>
    <string name="profile">Profile</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="url">Url</string>
    <string name="image_url">Image Url</string>
    <string name="content_description_news">News</string>
    <string name="content_description_info">Info</string>
    <string name="content_description_profile">Profile</string>
    <string name="content_description_settings">Settings</string>
    <string name="classes">Classes</string>
    <string name="barbarian">BARBARIAN</string>
    <string name="crusader">CRUSADER</string>
    <string name="demon_hunter">DEMON HUNTER</string>
    <string name="monk">MONK</string>
    <string name="necromancer">NECROMANCER</string>
    <string name="witch_doctor">WITCH DOCTOR</string>
    <string name="wizard">WIZARD</string>
    <string name="items">Items</string>
    <string name="login_caps">LOGIN</string>
    <string name="username_or_email">Username or Email:</string>
    <string name="example_email_com">example@email.com</string>
    <string name="password_hint">********</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="don_t_have_an_account">Don\'t have an account? REGISTER HERE</string>
    <string name="register">Register</string>
    <string name="season_36_available">Season 36 available</string>
    <string name="featured_content">Featured Content</string>
    <string name="class_name">Class Name</string>
    <string name="content_description_select_male">Select Male</string>
    <string name="content_description_select_female">Select Female</string>
    <string name="primary_stat">Primary Stat</string>
    <string name="loading_class_description">Loading class description…</string>
    <string name="new_post">NEW POST</string>
    <string name="sign_up">SIGN UP</string>
    <string name="unlocked_at_level">Unlocked at Level: %d</string>
    <string name="cost">Cost: %d%s</string>
    <string name="male_portrait">%s/%s/male-portrait.jpg</string>
    <string name="female_portrait">%s/%s/female-portrait.jpg</string>
    <string name="class_ability_name_key">name</string>
    <string name="class_ability_name_default">Ability</string>
    <string name="class_ability_level_key">level</string>
    <string name="class_ability_cost_key">cost</string>
    <string name="class_ability_cost_default">Resource</string>
    <string name="class_ability_costunits_key">costUnits</string>
    <string name="class_ability_description_key">desc</string>
    <string name="class_ability_icon_key">icon</string>
    <string name="class_ability_icon_default"></string>
    <string name="class_information_hero_slug_key">HERO_SLUG</string>
    <string name="class_information_hero_slug_default">barbarian</string>
    <string name="barbarian_slug">barbarian</string>
    <string name="crusader_slug">crusader</string>
    <string name="demon_hunter_slug">demon-hunter</string>
    <string name="monk_slug">monk</string>
    <string name="necromancer_slug">necromancer</string>
    <string name="witch_doctor_slug">witch-doctor</string>
    <string name="wizard_slug">wizard</string>
    <string name="item_name_key">name</string>
    <string name="item_type_key">type</string>
    <string name="item_required_level_key">requiredLevel</string>
    <string name="item_description_key">desc</string>
    <string name="item_icon_url_key">iconUrl</string>
    <string name="item_requires_level">REQUIRES LEVEL: %d</string>
    <string name="item_description">Damage: %s\nAPS: %f</string>
    <string name="class_gif_prefix">https://static.wikia.nocookie.net/diablo/images/%s.gif</string>
    <string name="class_gif_suffix_barbarian">b/b3/Barbarian_Male_Selection</string>
    <string name="class_gif_suffix_crusader">3/35/Crusader_Male_Selection</string>
    <string name="class_gif_suffix_demon_hunter">7/70/Demon_Hunter_Male_Selection</string>
    <string name="class_gif_suffix_monk">a/a7/Monk_Male_Selection</string>
    <string name="class_gif_suffix_necromancer">2/25/Necromancer_Selection</string>
    <string name="class_gif_suffix_witch_doctor">2/22/Witch_Doctor_Male_Selection</string>
    <string name="class_gif_suffix_wizard">7/7a/Wizard_Male_Selection</string>
    <string name="item_icon_url">%s/items/%s/%s.png</string>
    <string name="skill_icon_url">%s/skills/%d/%s.png</string>
    <string name="icons_base_url">https://blzmedia-a.akamaihd.net/d3/icons</string>
    <string name="portrait_base_url">https://us.diablo3.blizzard.com/static/images/hero</string>
    <string name="class_icon_base_url">https://render-us.worldofwarcraft.com/d3/icons/classes</string>
    <string name="class_icon_url">%s/%s.png</string>
    <string name="class_icon_api_url">%s/classes/%s.png</string>
    <string name="user_shared_preferences_key">prefs_user</string>
    <string name="profile_username_default">Not Signed in</string>
    <string name="profile_status_default">Status here</string>
    <string name="primary_stat_strength">Strength</string>
    <string name="primary_stat_dexterity">Dexterity</string>
    <string name="primary_stat_intelligence">Intelligence</string>
    <string name="class_primary_stat_format">Primary stat: %s</string>
    <string name="firebase_users_reference_path">users</string>
    <string name="firebase_posts_reference_path">posts</string>
    <string name="firebase_analytics_post_click_user_key">post_click_user</string>
    <string name="firebase_analytics_post_click_author_key">post_click_author</string>
    <string name="firebase_analytics_post_selected_event">PostSelected</string>
    <string name="firebase_analytics_post_creation_user_key">post_creation_user</string>
    <string name="firebase_analytics_post_created_event">PostCreated</string>
    <string name="firebase_error_tag">FIREBASE</string>
    <string name="profile_hero_level">"%s LVL. %s"</string>
</resources>
