<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_post"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/title"
            android:textColor="?attr/colorOnSurface" />


        <EditText
            android:id="@+id/new_post_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="text"
            android:textColor="?attr/colorOnSurface" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/description"
            android:textColor="?attr/colorOnSurface" />


        <EditText
            android:id="@+id/new_post_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="text"
            android:textColor="?attr/colorOnSurface" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/url"
            android:textColor="?attr/colorOnSurface" />


        <EditText
            android:id="@+id/new_post_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="textUri"
            android:textColor="?attr/colorOnSurface" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/image_url"
            android:textColor="?attr/colorOnSurface" />


        <EditText
            android:id="@+id/new_post_img_url"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="textUri"
            android:textColor="?attr/colorOnSurface" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/upload_post"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/circle_bg"
        android:contentDescription="@string/content_description"
        android:elevation="8dp"
        android:padding="12dp"
        android:src="@drawable/baseline_check_24" />

    <ImageButton
        android:id="@+id/exit_new_post"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:background="@drawable/circle_bg_default"
        android:contentDescription="@string/content_description"
        android:elevation="8dp"
        android:padding="12dp"
        android:src="@drawable/baseline_arrow_back_24_white" />

</RelativeLayout>
