<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">


    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="32dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/txtProfileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/profile"
                android:textColor="@color/text_primary"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_marginBottom="12dp"
                android:scaleType="centerCrop"
                android:background="@drawable/ic_template_profile_img"
                android:contentDescription="@string/content_description"/>

            <EditText
                android:id="@+id/profile_img_url"
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:hint="@string/image_url_ellipsis"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/text_primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/profile_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_muted"
                    android:textColorHint="@color/text_muted"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/profile_edit_btn"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/ic_btn_username"
                    android:contentDescription="@string/content_description"/>
            </LinearLayout>

            <TextView
                android:id="@+id/btn_sign_out"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:text="@string/sign_out"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:background="@color/white"/>

            <TextView
                android:id="@+id/profile_heroes_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/heroes"
                android:textColor="@color/text_primary"
                android:textSize="22sp"
                android:textStyle="bold" />

            <!--res/layout/profile_hero.xml-->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/profile_hero_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <!--res/layout/profile_hero.xml-->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/profile_hero_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

            <!--res/layout/profile_hero.xml-->
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/profile_hero_3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>

