<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/user"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/sign_up_user"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="text"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/password"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:text="@string/confirm_password"
            android:textColor="@color/white"/>


        <EditText
            android:id="@+id/sign_up_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:inputType="textPassword"
            android:textColor="@color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/sign_up_confirm"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="12dp"
        android:contentDescription="@string/content_description"
        android:elevation="8dp"
        android:background="@drawable/ic_btn_community_active"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="50dp"/>

    <ImageButton
        android:id="@+id/sign_up_exit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="12dp"
        android:contentDescription="@string/content_description"
        android:elevation="8dp"
        android:background="@drawable/ic_btn_news_deactive"
        android:layout_margin="20dp"/>

</RelativeLayout>